# silas-daily-english

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-publish.yml
data/: base_words.txt  config.json  lessons.json  state.default.json
scripts/: import_vocabulary.py
src/silas_daily_english/: __init__.py  cli.py  config.py  emailer.py  models.py  pipeline.py  questions.py  rss.py  storage.py  story.py  subtitles.py  themes.py  tts.py  validate.py  vocabulary.py
tests/: test_cli.py  test_config.py  test_import_vocabulary.py  test_pipeline.py  test_subtitles.py  test_themes.py  test_tts.py
